# SDLTemplate

./: CMakeLists.txt  LICENSE  README.md  build.py
src/: CMakeLists.txt  main.c
